--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -777,19 +777,19 @@
 
     <div class="filter-columns">
       <div class="filter-header">Workshop Category</div>
-      <button data-filter=">C.A.M.P. Pieces">C.A.M.P. Pieces</button>
-      <button data-filter="Decorations">Decorations</button>
+      <button data-filter="c.a.m.p. pieces">C.A.M.P. Pieces</button>
+      <button data-filter="decorations">Decorations</button>
       <button data-filter="defense">Defense</button>
       <button data-filter="dwellers">Dwellers</button>
       <button data-filter="furniture">Furniture</button>
       <button data-filter="lights">Lights</button>
       <button data-filter="power">Power</button>
       <button data-filter="quest">Quest</button>
-      <button data-filter="resource">Resource</button>
+      <button data-filter="resources">Resource</button>
       <button data-filter="storage">Storage</button>
       <button data-filter="structure">Structure</button>
       <button data-filter="utility">Utility</button>
-      <button data-filter="walldecor">Wall Decor</button>
+      <button data-filter="wall decor">Wall Decor</button>
       <button data-filter="wallpapers">Wallpapers</button>
     </div>
     
