--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -499,8 +499,8 @@
   color: var(--text);                
   border: none;                       
   border-radius: 0;                  
-  padding: 4px 8px;                    
-  text-align: left;                  
+  padding: 2px 8px;                    
+  text-align: center;                  
   width: 100%;                       
   cursor: pointer;
   transition: background 0.2s;
@@ -515,7 +515,14 @@
 
 .filter-header {
   font-weight: bold;
-  margin-bottom: 4px;
+  margin: 0;                  
+  padding: 4px 8px;          
+  text-align: center;         
+  background-color: #333;    
+  color: var(--accent);      
+  border-radius: 4px 4px 0 0;
+  margin-bottom: 2px;         
+  font-size: 13px;
 }
 
 #filtersOptions button[data-filter]:hover,
@@ -552,7 +559,7 @@
   font-size: 14px;
   z-index: 200;
   overflow: hidden;
-  padding: 4px 0;                     /* reduce vertical space */
+  padding: 0px 0;                     /* reduce vertical space */
   box-sizing: border-box;
 }
 
