--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -551,7 +551,7 @@
   position: absolute;
   top: 100%;
   left: 0;
-  width: 100%;
+  width: 100px;
   margin-top: -2px;
   background-color: var(--card-bg);
   border: 2px solid var(--accent);   /* outer dropdown border */
