--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -443,7 +443,7 @@
 }
 
 #filtersDropdown {
-  width: 120px;   
+  width: 150px;   
   position: relative;
 }
 
@@ -551,7 +551,7 @@
   position: absolute;
   top: 100%;
   left: 0;
-  width: 100px;
+  width: 100%;
   margin-top: -2px;
   background-color: var(--card-bg);
   border: 2px solid var(--accent);   /* outer dropdown border */
