--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -509,7 +509,7 @@
   background: none;  
   color: white;     
   font-size: 13px;   
-  line-height: 1.2;
+  line-height: 1;
   cursor: pointer;
   transition: background 0.2s;
 }
@@ -566,12 +566,13 @@
   width: 100%;
   margin-top: -2px;
   background-color: var(--card-bg);
-  border: 2px solid var(--accent);   /* outer dropdown border */
+  border: 2px solid var(--accent);   
   border-radius: 0 0 6px 6px;
   font-size: 14px;
   z-index: 200;
+  gap: 0;
   overflow: hidden;
-  padding: 0px 0;                     /* reduce vertical space */
+  padding: 0px 0;                  
   box-sizing: border-box;
 }
 
