--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -542,7 +542,8 @@
 }
 
 #filtersButton.open {
-  border-radius: 6px 6px 0 0;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .clear-filters {
@@ -1135,14 +1136,33 @@ function renderResults(query) {
   else if (currentSearchBy === 'entm') matchesSearch = item.ENTM_FULL && item.ENTM_FULL.toLowerCase().includes(normalizedQuery);
 
   // filter buttons
-  let matchesFilters = true;
-  if (activeFilters.size) {
-    matchesFilters = [...activeFilters].some(filter => {
-      if (filter === 'plan') return item.BOOK_FULL && item.BOOK_FULL.trim() !== '';
-      if (filter === 'entitlement') return item.ENTM_FULL && item.ENTM_FULL.trim() !== '';
-      return (item.Category || '').toLowerCase() === filter || (item.SubCategory || '').toLowerCase() === filter;
-    });
-  }
+let matchesFilters = true;
+
+if (activeFilters.size) {
+    // Define which filters are considered "placement-type" (OR)
+    const placementFilters = new Set(['plan', 'entitlement']);
+
+    // Split active filters into placement-type and category-type
+    const activePlacement = [...activeFilters].filter(f => placementFilters.has(f));
+    const activeCategory = [...activeFilters].filter(f => !placementFilters.has(f));
+
+    // OR logic for placement filters
+    if (activePlacement.length) {
+        matchesFilters = activePlacement.some(f => {
+            if (f === 'plan') return item.BOOK_FULL && item.BOOK_FULL.trim() !== '';
+            if (f === 'entitlement') return item.ENTM_FULL && item.ENTM_FULL.trim() !== '';
+            return false;
+        });
+    }
+
+    // AND logic for category/subcategory filters
+    if (activeCategory.length) {
+        matchesFilters = matchesFilters && activeCategory.every(f =>
+            (item.Category || '').toLowerCase() === f || (item.SubCategory || '').toLowerCase() === f
+        );
+    }
+}
+
 
   return matchesSearch && matchesFilters;
 });
