--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1152,34 +1152,44 @@ function renderResults(query) {
   const queryChanged = normalizedQuery !== lastQuery;
   lastQuery = normalizedQuery;
 
- const filtered = db.filter(item => {
-  // basic search filtering
-  let matchesSearch;
-  if (!normalizedQuery) matchesSearch = true;
-  else if (currentSearchBy === 'name') matchesSearch = item.Name && item.Name.toLowerCase().includes(normalizedQuery);
-  else if (currentSearchBy === 'book') matchesSearch = item.BOOK_FULL && item.BOOK_FULL.toLowerCase().includes(normalizedQuery);
-  else if (currentSearchBy === 'entm') matchesSearch = item.ENTM_FULL && item.ENTM_FULL.toLowerCase().includes(normalizedQuery);
+  // --- filters setup ---
+  let placementFilters = new Set(['plan', 'entitlement']);
 
-  // filter buttons
-let placementFilters = new Set(['plan', 'entitlement']);
+  function matchesItem(item) {
+    if (activeFilters.size === 0) return true; // no filters → always match
 
-let matchesFilters = activeFilters.size === 0 || (
-    // OR logic for placement filters
-    ( [...activeFilters].filter(f => placementFilters.has(f))
-        .some(f => (f === 'plan' && item.BOOK_FULL?.trim()) ||
-                   (f === 'entitlement' && item.ENTM_FULL?.trim())) 
-    || [...activeFilters].filter(f => !placementFilters.has(f)).length === 0 )  
-    &&
-    // AND logic for category/subcategory filters
-    [...activeFilters].filter(f => !placementFilters.has(f))
-        .every(f => (item.Category || '').toLowerCase() === f || (item.SubCategory || '').toLowerCase() === f)
-);
+    // Separate active filters into types
+    const placementActive = [...activeFilters].filter(f => placementFilters.has(f));
+    const categoryActive  = [...activeFilters].filter(f => !placementFilters.has(f));
 
+    // --- Placement filters (plan, entitlement) OR logic ---
+    const placementMatch = placementActive.length === 0 || placementActive.some(f => 
+      (f === 'plan' && item.BOOK_FULL?.trim()) ||
+      (f === 'entitlement' && item.ENTM_FULL?.trim())
+    );
 
+    // --- Category/subcategory filters OR logic ---
+    const categoryMatch = categoryActive.length === 0 || categoryActive.some(f => 
+      (item.Category || '').toLowerCase() === f || (item.SubCategory || '').toLowerCase() === f
+    );
 
-  return matchesSearch && matchesFilters;
-});
+    // AND across different filter types
+    return placementMatch && categoryMatch;
+  }
 
+  // --- Filter the DB ---
+  const filtered = db.filter(item => {
+    // basic search
+    let matchesSearch;
+    if (!normalizedQuery) matchesSearch = true;
+    else if (currentSearchBy === 'name') matchesSearch = item.Name && item.Name.toLowerCase().includes(normalizedQuery);
+    else if (currentSearchBy === 'book') matchesSearch = item.BOOK_FULL && item.BOOK_FULL.toLowerCase().includes(normalizedQuery);
+    else if (currentSearchBy === 'entm') matchesSearch = item.ENTM_FULL && item.ENTM_FULL.toLowerCase().includes(normalizedQuery);
+
+    const matchesFilters = matchesItem(item); // call the new function
+
+    return matchesSearch && matchesFilters;
+  });
 
   const sorted = sortItems(filtered);
 
