--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -789,37 +789,38 @@
     </svg>
   </div>
 
-<div id="filtersOptions">
-  <!-- Clear All button at top -->
-  <div style="flex-basis: 100%; text-align: center; margin-bottom: 8px;">
-    <button class="clear-filters">Clear All</button>
-  </div>
+  <div id="filtersOptions">
+    <div class="filter-columns">
+      <div class="filter-header">Placement Condition</div>
+      <button data-filter="plan">Plan</button>
+      <button data-filter="entitlement">Entitlement</button>
+    </div>
 
-  <div class="filter-columns">
-    <div class="filter-header">Placement Condition</div>
-    <button data-filter="plan">Plan</button>
-    <button data-filter="entitlement">Entitlement</button>
-  </div>
-
-  <div class="filter-columns">
-    <div class="filter-header">Workshop Category</div>
-    <button data-filter="c.a.m.p. pieces">C.A.M.P. Pieces</button>
-    <button data-filter="decorations">Decorations</button>
-    <button data-filter="defense">Defense</button>
-    <button data-filter="dwellers">Dwellers</button>
-    <button data-filter="furniture">Furniture</button>
-    <button data-filter="lights">Lights</button>
-    <button data-filter="power">Power</button>
-    <button data-filter="quest">Quest</button>
-    <button data-filter="resources">Resource</button>
-    <button data-filter="storage">Storage</button>
-    <button data-filter="structure">Structure</button>
-    <button data-filter="utility">Utility</button>
-    <button data-filter="wall decor">Wall Decor</button>
-    <button data-filter="wallpapers">Wallpapers</button>
+    <div class="filter-columns">
+      <div class="filter-header">Workshop Category</div>
+      <button data-filter="c.a.m.p. pieces">C.A.M.P. Pieces</button>
+      <button data-filter="decorations">Decorations</button>
+      <button data-filter="defense">Defense</button>
+      <button data-filter="dwellers">Dwellers</button>
+      <button data-filter="furniture">Furniture</button>
+      <button data-filter="lights">Lights</button>
+      <button data-filter="power">Power</button>
+      <button data-filter="quest">Quest</button>
+      <button data-filter="resources">Resource</button>
+      <button data-filter="storage">Storage</button>
+      <button data-filter="structure">Structure</button>
+      <button data-filter="utility">Utility</button>
+      <button data-filter="wall decor">Wall Decor</button>
+      <button data-filter="wallpapers">Wallpapers</button>
+    </div>
+    
+    <!-- Clear All button spanning both columns -->
+    <div style="flex-basis: 100%; text-align: center; margin-top: 8px;">
+      <button class="clear-filters">Clear All</button>
+    </div>
   </div>
 </div>
-
+  </div> 
 
   <!-- Sort group -->
   <div class="group-sort">
