--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -977,7 +977,7 @@ const ManualIcons = {
 const ManualEntmIcons = {
   'Babylon_': '/assets/V51Icon.png',
   'Shelters_': '/assets/AtomIcon.png',
-  'F1_': /assets/SubCategory-AdditionalStorageIcon.svg
+  'F1_': '/assets/SubCategory-AdditionalStorageIcon.svg
 };
 const miniSeasonAliases = {
   'SCORE_MiniSeason_2025_MMMFE': 'Marshal Mallow'
