--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -559,18 +559,6 @@
   transition: background 0.2s;
 }
 
-
-.clear-filters-inline {
-  margin-left: 4px;
-  padding: 6px 10px;
-  background-color: var(--accent-color);
-  border: 1px solid var(--accent-border, #555);
-  border-radius: 0 4px 4px 0;
-  color: white;
-  cursor: pointer;
-  font-size: 0.85rem;
-}
-
 #filtersOptions {
   display: flex;
   flex-direction: column;
@@ -791,45 +779,48 @@
   </div>
 
 <div class="inline-group">
+  <!-- Filters group -->
   <div class="group-filters">
-    <div class="custom-dropdown" id="filtersDropdown">
-      <div id="filtersButton">
-        Filters
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="filter-icon" style="width:16px; height:16px;">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 0 1-.659 1.591l-5.432 5.432a2.25 2.25 0 0 0-.659 1.591v2.927a2.25 2.25 0 0 1-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 0 0-.659-1.591L3.659 7.409A2.25 2.25 0 0 1 3 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0 1 12 3Z" />
-        </svg>
-      </div>
+  <div class="custom-dropdown" id="filtersDropdown">
+  <div id="filtersButton">
+    Filters
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="filter-icon" style="width:16px; height:16px;">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 0 1-.659 1.591l-5.432 5.432a2.25 2.25 0 0 0-.659 1.591v2.927a2.25 2.25 0 0 1-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 0 0-.659-1.591L3.659 7.409A2.25 2.25 0 0 1 3 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0 1 12 3Z" />
+    </svg>
+  </div>
 
-      <div id="filtersOptions">
-        <div class="filter-columns">
-          <div class="filter-header">Placement Condition</div>
-          <button data-filter="plan">Plan</button>
-          <button data-filter="entitlement">Entitlement</button>
-        </div>
-
-        <div class="filter-columns">
-          <div class="filter-header">Workshop Category</div>
-          <button data-filter="c.a.m.p. pieces">C.A.M.P. Pieces</button>
-          <button data-filter="decorations">Decorations</button>
-          <button data-filter="defense">Defense</button>
-          <button data-filter="dwellers">Dwellers</button>
-          <button data-filter="furniture">Furniture</button>
-          <button data-filter="lights">Lights</button>
-          <button data-filter="power">Power</button>
-          <button data-filter="quest">Quest</button>
-          <button data-filter="resources">Resource</button>
-          <button data-filter="storage">Storage</button>
-          <button data-filter="structure">Structure</button>
-          <button data-filter="utility">Utility</button>
-          <button data-filter="wall decor">Wall Decor</button>
-          <button data-filter="wallpapers">Wallpapers</button>
-        </div>
-      </div>
+  <div id="filtersOptions">
+    <div class="filter-columns">
+      <div class="filter-header">Placement Condition</div>
+      <button data-filter="plan">Plan</button>
+      <button data-filter="entitlement">Entitlement</button>
     </div>
 
-    <!-- Clear button now outside -->
-    <button class="clear-filters-inline">Clear</button>
+    <div class="filter-columns">
+      <div class="filter-header">Workshop Category</div>
+      <button data-filter="c.a.m.p. pieces">C.A.M.P. Pieces</button>
+      <button data-filter="decorations">Decorations</button>
+      <button data-filter="defense">Defense</button>
+      <button data-filter="dwellers">Dwellers</button>
+      <button data-filter="furniture">Furniture</button>
+      <button data-filter="lights">Lights</button>
+      <button data-filter="power">Power</button>
+      <button data-filter="quest">Quest</button>
+      <button data-filter="resources">Resource</button>
+      <button data-filter="storage">Storage</button>
+      <button data-filter="structure">Structure</button>
+      <button data-filter="utility">Utility</button>
+      <button data-filter="wall decor">Wall Decor</button>
+      <button data-filter="wallpapers">Wallpapers</button>
+    </div>
+    
+    <!-- Clear All button spanning both columns -->
+    <div style="flex-basis: 100%; text-align: center; margin-top: 8px;">
+      <button class="clear-filters">Clear All</button>
+    </div>
   </div>
+</div>
+  </div> 
 
   <!-- Sort group -->
   <div class="group-sort">
@@ -1193,7 +1184,7 @@ filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
 
   // --- Filter the DB ---
   const filtered = db.filter(item => {
-    if (!item.Name || item.Name === 'null' || item.Name.trim() === '') return false;
+  if (!item.Name || item.Name === 'null' || item.Name.trim() === '') return false;
     // basic search
     let matchesSearch;
     if (!normalizedQuery) matchesSearch = true;
