--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1,3 +1,5 @@
+
+nt fucked pre button move
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -547,20 +549,17 @@
 }
 
 .clear-filters {
-  height: 36px;
-  margin-left: 4px;
-  padding: 4px 10px;
-  border: 1px solid var(--accent);
-  background: var(--bg);
-  color: var(--accent);
-  border-radius: 6px;
+  margin-top: 4px;               /* reduce gap above button */
+  padding: 4px 8px;              /* small button */
+  background-color: #ffeded;
+  border: 1px solid #ff4d4f;
+  color: #ff4d4f;
+  border-radius: 4px 4px 0 0;    /* only bottom corners rounded */
   cursor: pointer;
+  text-align: center;
+  font-size: 13px;
+  transition: background 0.2s;
 }
-.clear-filters:hover {
-  background: var(--accent);
-  color: var(--bg);
-}
-
 
 #filtersOptions {
   display: flex;
@@ -781,48 +780,52 @@
     </div>
   </div>
 
-<div class="inline-group" style="align-items: flex-start;">
+<div class="inline-group">
   <!-- Filters group -->
-  <div class="group-filters" style="display: flex; align-items: center;">
-    <div class="custom-dropdown" id="filtersDropdown" style="width: 150px;">
-      <div id="filtersButton">
-        Filters
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="filter-icon" style="width:16px; height:16px;">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 0 1-.659 1.591l-5.432 5.432a2.25 2.25 0 0 0-.659 1.591v2.927a2.25 2.25 0 0 1-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 0 0-.659-1.591L3.659 7.409A2.25 2.25 0 0 1 3 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0 1 12 3Z" />
-        </svg>
-      </div>
-      <div id="filtersOptions">
-        <div class="filter-columns">
-          <div class="filter-header">Placement Condition</div>
-          <button data-filter="plan">Plan</button>
-          <button data-filter="entitlement">Entitlement</button>
-        </div>
-        <div class="filter-columns">
-          <div class="filter-header">Workshop Category</div>
-          <button data-filter="c.a.m.p. pieces">C.A.M.P. Pieces</button>
-          <button data-filter="decorations">Decorations</button>
-          <button data-filter="defense">Defense</button>
-          <button data-filter="dwellers">Dwellers</button>
-          <button data-filter="furniture">Furniture</button>
-          <button data-filter="lights">Lights</button>
-          <button data-filter="power">Power</button>
-          <button data-filter="quest">Quest</button>
-          <button data-filter="resources">Resource</button>
-          <button data-filter="storage">Storage</button>
-          <button data-filter="structure">Structure</button>
-          <button data-filter="utility">Utility</button>
-          <button data-filter="wall decor">Wall Decor</button>
-          <button data-filter="wallpapers">Wallpapers</button>
-        </div>
-        <div style="flex-basis: 100%; text-align: center; margin-top: 8px;">
-          <button class="clear-filters">Clear All</button>
-        </div>
-      </div>
-    </div>
+  <div class="group-filters">
+  <div class="custom-dropdown" id="filtersDropdown">
+  <div id="filtersButton">
+    Filters
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="filter-icon" style="width:16px; height:16px;">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 0 1-.659 1.591l-5.432 5.432a2.25 2.25 0 0 0-.659 1.591v2.927a2.25 2.25 0 0 1-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 0 0-.659-1.591L3.659 7.409A2.25 2.25 0 0 1 3 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0 1 12 3Z" />
+    </svg>
   </div>
 
+  <div id="filtersOptions">
+    <div class="filter-columns">
+      <div class="filter-header">Placement Condition</div>
+      <button data-filter="plan">Plan</button>
+      <button data-filter="entitlement">Entitlement</button>
+    </div>
+
+    <div class="filter-columns">
+      <div class="filter-header">Workshop Category</div>
+      <button data-filter="c.a.m.p. pieces">C.A.M.P. Pieces</button>
+      <button data-filter="decorations">Decorations</button>
+      <button data-filter="defense">Defense</button>
+      <button data-filter="dwellers">Dwellers</button>
+      <button data-filter="furniture">Furniture</button>
+      <button data-filter="lights">Lights</button>
+      <button data-filter="power">Power</button>
+      <button data-filter="quest">Quest</button>
+      <button data-filter="resources">Resource</button>
+      <button data-filter="storage">Storage</button>
+      <button data-filter="structure">Structure</button>
+      <button data-filter="utility">Utility</button>
+      <button data-filter="wall decor">Wall Decor</button>
+      <button data-filter="wallpapers">Wallpapers</button>
+    </div>
+    
+    <!-- Clear All button spanning both columns -->
+    <div style="flex-basis: 100%; text-align: center; margin-top: 8px;">
+      <button class="clear-filters">Clear All</button>
+    </div>
+  </div>
+</div>
+  </div> 
+
   <!-- Sort group -->
-  <div class="group-sort" style="display: flex; align-items: center;">
+  <div class="group-sort">
     <label for="sortMode">Sort By:</label>
     <div class="custom-dropdown" id="sortDropdown">
       <div id="sortSelected">Workshop Menu ▼</div>
@@ -995,7 +998,6 @@ fetch('final_workshop_db.json')
   });
 
 // --- Dropdowns ---
-// --- Dropdowns ---
 const dropdownSelected = document.getElementById('dropdownSelected');
 dropdownSelected.textContent = 'Search By: Item Name';
 const dropdownOptions = document.getElementById('dropdownOptions');
@@ -1004,7 +1006,6 @@ const sortOptions = document.getElementById('sortOptions');
 const filtersButton = document.getElementById('filtersButton');
 const filtersOptions = document.getElementById('filtersOptions');
 const clearFiltersBtn = document.querySelector('.clear-filters');
-const searchBox = document.getElementById('searchBox');
 
 function closeAllDropdowns() {
   dropdownOptions.style.display = 'none';
@@ -1012,63 +1013,45 @@ function closeAllDropdowns() {
   sortOptions.style.display = 'none';
   sortSelected.classList.remove('open');
   filtersOptions.style.display = 'none';
-  filtersButton.classList.remove('open');
+  filtersButton.classList.remove('open')
 }
 
-// --- Search dropdown ---
 dropdownSelected.addEventListener('click', e => {
   e.stopPropagation();
-  const open = dropdownOptions.style.display === 'block';
+  const isOpen = dropdownOptions.style.display === 'block';
   closeAllDropdowns();
-  if (!open) {
+  if (!isOpen) {
     dropdownOptions.style.display = 'block';
     dropdownSelected.classList.add('open');
   }
 });
 
-// --- Sort dropdown ---
 sortSelected.addEventListener('click', e => {
   e.stopPropagation();
-  const open = sortOptions.style.display === 'block';
+  const isOpen = sortOptions.style.display === 'block';
   closeAllDropdowns();
-  if (!open) {
+  if (!isOpen) {
     sortOptions.style.display = 'block';
     sortSelected.classList.add('open');
   }
 });
 
-// --- Filters dropdown ---
+document.addEventListener('click', closeAllDropdowns);
+
 filtersButton.addEventListener('click', e => {
   e.stopPropagation();
-  const open = filtersOptions.style.display === 'block';
-  closeAllDropdowns();
-  if (!open) {
-    filtersOptions.style.display = 'block';
-    filtersButton.classList.add('open');
-  }
+  const isOpen = filtersOptions.style.display === 'block';
+  filtersOptions.style.display = isOpen ? 'none' : 'block';
 });
 
 filtersOptions.addEventListener('click', e => e.stopPropagation());
 
-// --- Global click closes all ---
-document.addEventListener('click', closeAllDropdowns);
-
-// --- Clear Filters button ---
 clearFiltersBtn.addEventListener('click', () => {
-  activeFilters.clear();
-  filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => btn.classList.remove('selected'));
-  renderResults(searchBox.value);
+  filtersOptions.querySelectorAll('button.selected').forEach(btn => btn.classList.remove('selected'));
 });
 
-// --- Individual filter toggles ---
 filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
-  btn.addEventListener('click', () => {
-    const f = btn.dataset.filter;
-    if (activeFilters.has(f)) activeFilters.delete(f);
-    else activeFilters.add(f);
-    btn.classList.toggle('selected');
-    renderResults(searchBox.value);
-  });
+  btn.addEventListener('click', () => btn.classList.toggle('selected'));
 });
 
 // --- Search & Sort Options ---
