--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1,5 +1,3 @@
-
-nt fucked pre button move
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -548,12 +546,6 @@ nt fucked pre button move
   border-bottom-right-radius: 0;
 }
 
-#filtersOptions.open {
-  border-top: none; 
-  border-radius: 0 0 6px 6px;
-  display: block; 
-}
-
 .clear-filters {
   margin-top: 4px;               /* reduce gap above button */
   padding: 4px 8px;              /* small button */
@@ -568,8 +560,7 @@ nt fucked pre button move
 }
 
 #filtersOptions {
-  display: none;
-  position: absolute;
+  display: flex;
   flex-direction: column;
   gap: 0;                 
   padding: 0;
@@ -1046,13 +1037,9 @@ sortSelected.addEventListener('click', e => {
 document.addEventListener('click', closeAllDropdowns);
 
 filtersButton.addEventListener('click', e => {
-  e.stopPropagation(); // Prevent immediate outside click close
-  filtersOptions.classList.toggle('open');
-});
-
-// Close dropdown if clicking outside
-document.addEventListener('click', () => {
-  filtersOptions.classList.remove('open');
+  e.stopPropagation();
+  const isOpen = filtersOptions.style.display === 'block';
+  filtersOptions.style.display = isOpen ? 'none' : 'block';
 });
 
 filtersOptions.addEventListener('click', e => e.stopPropagation());
