--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -976,7 +976,7 @@ const ManualIcons = {
 };
 const ManualEntmIcons = {
   'Babylon_': '/assets/V51Icon.png',
-  ['F1_']: '/assets/SubCategory-AdditionalStorageIcon.svg',
+  'F1_': '/assets/SubCategory-AdditionalStorageIcon.svg',
   'Shelters_': '/assets/AtomIcon.png',
 };
 const miniSeasonAliases = {
