--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1352,6 +1352,7 @@ filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
         // --- Manual icon overrides ---
         const ManualEntmIcons = {
           'Babylon_': '/assets/V51Icon.png',
+          'F1_': '/assets/SubCategory-AdditionalStorageIcon.svg',
           'Shelters_': '/assets/AtomIcon.png',
         };
 
