--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1355,90 +1355,74 @@ filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
           'Shelters_': '/assets/AtomIcon.png',
         };
 
-       
-       // --- Split ENTM_FULL into multiple parts if needed ---
-let entmParts = [];
-if (r.ENTM_FULL) {
-  entmParts = r.ENTM_FULL
-    .split(';')
-    .map(p => p.trim())
-    .filter(p => p && !/^UTILITY_ENTM_ItemDisableEntitlement/i.test(p));
-}
+        // --- Determine tag based on EDID ---
+        let tag = '';
+        const edidUpper = edid.toUpperCase();
+        if (edidUpper.includes('ATX')) {
+          tag = 'Atomic Shop';
+        } else if (edidUpper.includes('SCORE_MINISEASON')) {
+          const aliasKey = Object.keys(miniSeasonAliases).find(key => edid.includes(key));
+          if (aliasKey) {
+            tag = `S.C.O.R.E. - Mini Season ${miniSeasonAliases[aliasKey]}`;
+          } else {
+            const match = edid.match(/SCORE[_-]?MiniSeason_\d+_([A-Za-z0-9]+?)(?:_ENTM|$)/i);
+            if (match) {
+              const namePart = match[1].replace(/([a-z])([A-Z])/g, '$1 $2').replace(/_/g, ' ');
+              tag = `S.C.O.R.E. - Mini Season ${namePart}`;
+            } else {
+              tag = 'S.C.O.R.E. - Mini Season';
+            }
+          }
+        } else {
+          const scoreMatch = edid.match(/SCORE[_-]?S?(\d+)/i);
+          if (scoreMatch) {
+            tag = `S.C.O.R.E. - Season ${scoreMatch[1]}`;
+          } else if (edidUpper.includes('SCORE')) {
+            tag = 'S.C.O.R.E.';
+          }
+        }
 
-// --- Loop through each entitlement entry ---
-entmParts.forEach((part, idx) => {
-  const edid = String(r.ENTM_EDID || '');
-  const entmPill = document.createElement('span');
-  entmPill.className = 'pill';
+        // --- Create ENTM pill ---
+        const entmPill = document.createElement('span');
+        entmPill.className = 'pill';
 
-  const icon = document.createElement('img');
-  icon.style.width = '30px';
-  icon.style.height = '30px';
-  icon.style.verticalAlign = 'middle';
-  icon.style.marginRight = '6px';
+        const icon = document.createElement('img');
+        icon.style.width = '30px';
+        icon.style.height = '30px';
+        icon.style.verticalAlign = 'middle';
+        icon.style.marginRight = '6px';
 
-  // --- Determine tag based on EDID ---
-  let tag = '';
-  const edidUpper = edid.toUpperCase();
-  if (edidUpper.includes('ATX')) {
-    tag = 'Atomic Shop';
-  } else if (edidUpper.includes('SCORE_MINISEASON')) {
-    const aliasKey = Object.keys(miniSeasonAliases).find(key => edid.includes(key));
-    if (aliasKey) {
-      tag = `S.C.O.R.E. - Mini Season ${miniSeasonAliases[aliasKey]}`;
-    } else {
-      const match = edid.match(/SCORE[_-]?MiniSeason_\d+_([A-Za-z0-9]+?)(?:_ENTM|$)/i);
-      if (match) {
-        const namePart = match[1].replace(/([a-z])([A-Z])/g, '$1 $2').replace(/_/g, ' ');
-        tag = `S.C.O.R.E. - Mini Season ${namePart}`;
-      } else {
-        tag = 'S.C.O.R.E. - Mini Season';
+        let textSuffix = '';
+        if (tag === 'Atomic Shop') {
+          icon.src = '/assets/AtomIcon.png';
+        } else if (tag.startsWith('S.C.O.R.E. - Mini Season')) {
+          icon.src = '/assets/SeasonIcon.png';
+          const miniMatch = tag.match(/Mini Season (.+)/);
+          if (miniMatch) textSuffix = ` (Mini Season: ${miniMatch[1]})`;
+        } else if (tag.startsWith('S.C.O.R.E. - Season')) {
+          icon.src = '/assets/SeasonIcon.png';
+          const seasonMatch = tag.match(/Season (\d+)/);
+          if (seasonMatch) textSuffix = ` (Season ${seasonMatch[1]})`;
+        }
+
+        // --- Apply manual icon overrides ---
+        for (const key in ManualEntmIcons) {
+          if (edid.includes(key)) {
+            icon.src = ManualEntmIcons[key];
+            textSuffix = '';
+            break;
+          }
+        }
+
+        entmPill.innerHTML = '';
+        entmPill.appendChild(icon);
+        entmPill.appendChild(document.createTextNode(entmFull + textSuffix));
+
+        condWrap.appendChild(entmPill);
       }
+
+      right.appendChild(condWrap);
     }
-  } else {
-    const scoreMatch = edid.match(/SCORE[_-]?S?(\d+)/i);
-    if (scoreMatch) {
-      tag = `S.C.O.R.E. - Season ${scoreMatch[1]}`;
-    } else if (edidUpper.includes('SCORE')) {
-      tag = 'S.C.O.R.E.';
-    }
-  }
-
-  // --- Determine correct icon ---
-  let textSuffix = '';
-  if (tag === 'Atomic Shop') {
-    icon.src = '/assets/AtomIcon.png';
-  } else if (tag.startsWith('S.C.O.R.E. - Mini Season')) {
-    icon.src = '/assets/SeasonIcon.png';
-    const miniMatch = tag.match(/Mini Season (.+)/);
-    if (miniMatch) textSuffix = ` (Mini Season: ${miniMatch[1]})`;
-  } else if (tag.startsWith('S.C.O.R.E. - Season')) {
-    icon.src = '/assets/SeasonIcon.png';
-    const seasonMatch = tag.match(/Season (\d+)/);
-    if (seasonMatch) textSuffix = ` (Season ${seasonMatch[1]})`;
-  } else if (edidUpper.includes('F1_')) {
-    icon.src = '/assets/SubCategory-AdditionalStorageIcon.svg';
-  } else {
-    const manualIconKey = Object.keys(ManualEntmIcons).find(k => edid.includes(k));
-    if (manualIconKey) icon.src = ManualEntmIcons[manualIconKey];
-  }
-
-  // --- Append icon + text ---
-  entmPill.appendChild(icon);
-  entmPill.appendChild(document.createTextNode(part + textSuffix));
-
-  condWrap.appendChild(entmPill);
-
-  // --- connector between multiple entitlements ---
-  if (idx < entmParts.length - 1) {
-    const conn = document.createElement('span');
-    conn.className = 'connector';
-    conn.textContent = 'or';
-    condWrap.appendChild(conn);
-  }
-});
-
-}
 
     // --- attach left + right divs to li ---
     li.appendChild(left);
