--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1338,27 +1338,14 @@ filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
         condWrap.appendChild(conn);
       }
       // --- ENTM pill ---
-    // --- ENTM pills (support multiple) ---
+    // --- ENTM pills ---
 if (hasEntm) {
-  // Split ENTM_FULL by semicolon or comma (adjust if your data uses different separator)
-  const entmItems = String(r.ENTM_FULL || '')
-    .split(/[\s;]+/)
-    .map(e => e.trim())
-    .filter(Boolean)
-    .map(e =>
-      e.replace(/UTILITY_ENTM_ItemDisableEntitlement\s*\[ENTM:[0-9A-Fa-f]+\]/gi, '').trim()
-    );
+  const entmItems = String(r.ENTM_FULL || '').split(';').map(e => e.trim()).filter(Boolean);
+  const edidItems = String(r.ENTM_EDID || '').split(';').map(e => e.trim()).filter(Boolean);
 
-  const edid = String(r.ENTM_EDID || '');
-  const ManualEntmIcons = {
-    'Babylon_': '/assets/V51Icon.png',
-    'Shelters_': '/assets/AtomIcon.png',
-  };
-  const miniSeasonAliases = {
-    'SCORE_MiniSeason_2025_MMMFE': 'Marshal Mallow',
-  };
+  entmItems.forEach((entmFull, i) => {
+    const edid = edidItems[i] || '';
 
-  entmItems.forEach((entmFull) => {
     const entmPill = document.createElement('span');
     entmPill.className = 'pill';
 
@@ -1368,15 +1355,13 @@ if (hasEntm) {
     icon.style.verticalAlign = 'middle';
     icon.style.marginRight = '6px';
 
+    // --- Tag logic ---
     let tag = '';
     const edidUpper = edid.toUpperCase();
     if (edidUpper.includes('ATX')) {
       tag = 'Atomic Shop';
     } else if (edidUpper.includes('SCORE_MINISEASON')) {
-      const aliasKey = Object.keys(miniSeasonAliases).find(key => edid.includes(key));
-      tag = aliasKey
-        ? `S.C.O.R.E. - Mini Season ${miniSeasonAliases[aliasKey]}`
-        : `S.C.O.R.E. - Mini Season`;
+      tag = `S.C.O.R.E. - Mini Season`;
     } else if (/SCORE[_-]?S?(\d+)/i.test(edid)) {
       const seasonMatch = edid.match(/SCORE[_-]?S?(\d+)/i);
       tag = `S.C.O.R.E. - Season ${seasonMatch[1]}`;
@@ -1384,20 +1369,21 @@ if (hasEntm) {
       tag = 'S.C.O.R.E.';
     }
 
+    // --- Manual icon overrides ---
+    const ManualEntmIcons = {
+      'Babylon_': '/assets/V51Icon.png',
+      'Shelters_': '/assets/AtomIcon.png',
+    };
+
     let textSuffix = '';
     if (tag === 'Atomic Shop') {
       icon.src = '/assets/AtomIcon.png';
     } else if (tag.startsWith('S.C.O.R.E. - Mini Season')) {
       icon.src = '/assets/SeasonIcon.png';
-      const miniMatch = tag.match(/Mini Season (.+)/);
-      if (miniMatch) textSuffix = ` (Mini Season: ${miniMatch[1]})`;
     } else if (tag.startsWith('S.C.O.R.E. - Season')) {
       icon.src = '/assets/SeasonIcon.png';
-      const seasonMatch = tag.match(/Season (\d+)/);
-      if (seasonMatch) textSuffix = ` (Season ${seasonMatch[1]})`;
     }
 
-    // Manual overrides
     for (const key in ManualEntmIcons) {
       if (edid.includes(key)) {
         icon.src = ManualEntmIcons[key];
@@ -1409,6 +1395,7 @@ if (hasEntm) {
     entmPill.innerHTML = '';
     entmPill.appendChild(icon);
     entmPill.appendChild(document.createTextNode(entmFull + textSuffix));
+
     condWrap.appendChild(entmPill);
   });
 }
