--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1368,11 +1368,19 @@ filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
             tag = seasonMatch ? `S.C.O.R.E. - Season ${seasonMatch[1]}` : 'S.C.O.R.E.';
         }
 
-        // --- Manual FO1st box overrides ---
-        let iconSrc = '';
-        if (edid.startsWith('F1_')) {
-            iconSrc = '/assets/SubCategory-AdditionalStorageIcon.svg';
-        }
+// --- Manual FO1st box overrides (force exact by ENTM_FULL) ---
+let iconSrc = '';
+const nameUpper = fullName.toUpperCase();
+if (
+  nameUpper === 'SCRAPBOX' ||
+  nameUpper === 'AMMO STORAGE BOX' ||
+  nameUpper === 'AID BOX'
+) {
+  iconSrc = '/assets/SubCategory-AdditionalStorageIcon.svg';
+} else if (edid.startsWith('F1_')) {
+  iconSrc = '/assets/SubCategory-AdditionalStorageIcon.svg';
+}
+
 
         // --- Other manual icons ---
         const ManualEntmIcons = {
